# GMU-MovingLeastSquaresDeformation

./: DeformationMLS_separated.sln
CurveDeformationMLS/: CMakeLists.txt  CurveCSS.cpp  CurveSignature.h  SchaeferMLS.cpp  SchaeferMLS.h  Test_Kernels.cl  deformShape.cl  device_context.cpp  device_context.h  error_codes.cpp  error_codes.h
CurveDeformationMLS/CMake/: FindOpenCL.cmake
DeformationMLS_separated/: CurveCSS.cpp  CurveSignature.cpp  DeformationMLS_separated.vcxproj  DeformationMLS_separated.vcxproj.filters
